# P03_VLM_ondevice

./: .gitignore  ALL_VLM_MODELS_LIST.md  LICENSE  MOBILE_SETUP.md  PROJECT_STATUS.md  VLM_BENCHMARK_GUIDE.md  VLM_BENCHMARK_REPORT.md  VLM_BENCHMARK_RESULTS.md  all_vlm_results.json  comprehensive_real_vlm_test.py  comprehensive_vlm_benchmark.py  comprehensive_vlm_results.json  final_visualization.py  final_vlm_analysis.py  full_capability_test.py  index.html  minimal_test.py  minimal_test2.py  multi_vlm_benchmark_results.json  package-lock.json  package.json  quick_multi_test.py  quick_vlm_results.json  quick_vlm_test.py  qwen2vl_results.json  real_image_test.py  real_image_vlm_results.json  run_smolvlm_benchmark.py  simple_test.py  smolvlm_benchmark_results.json  tailwind.config.js  test_all_vlm.py  test_gemini_free.py  test_image_download.py  test_mobilevlm.py  test_multiple_vlm.py  test_qwen2vl.py  test_real_images.py  test_vlm_capability.py  visualize_final.py  (+4 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/analysis/: damage.rs  grading.rs  mod.rs  types.rs
src-tauri/src/model/: downloader.rs  inference.rs  mod.rs  preprocessing.rs  prompts.rs  tokenizer.rs
src/components/: AnalysisProgress.tsx  ConditionGradeBadge.tsx  DamageBreakdown.tsx  DamageTypeCard.tsx  ImagePreview.tsx
src/hooks/: useAnalysis.ts
src/i18n/: en.ts  index.ts  ko.ts
src/lib/: tauri.ts
src/pages/: AnalysisPage.tsx  CapturePage.tsx  HomePage.tsx  ResultPage.tsx
(+2 files in other folders)
