[package]
name = "vlm-product-inspector"
version = "0.1.0"
edition = "2021"

[lib]
name = "vlm_product_inspector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.16"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
